--- a/_config.yml
+++ b/_config.yml
@@ -191,6 +191,9 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - _posts/
+  - _news/
+  - _projects/
 keep_files:
   - CNAME
   - .nojekyll
