--- a/_config.yml
+++ b/_config.yml
@@ -194,6 +194,10 @@ exclude:
   - _posts/
   - _news/
   - _projects/
+  - _pages/blog.md
+  - _pages/projects.md
+  - _pages/repositories.md
+  - _pages/people.md
 keep_files:
   - CNAME
   - .nojekyll
