--- a/_config.yml
+++ b/_config.yml
@@ -196,7 +196,7 @@ exclude:
   - _pages/blog.md
   - _pages/projects.md
   - _pages/repositories.md
-  - _pages/people.md
+  - _pages/profiles.md
 keep_files:
   - CNAME
   - .nojekyll
